--- a/essai.html
+++ b/essai.html
@@ -1,8 +1,11 @@
 <html>
-<head>
-<title>Essai</title>
-</head>
+  <head>
+    <title>Essai</title>
+  </head>
 <body>
-<h1>Essai</h1>
+  <header>
+     <h1>Essai</h1>
+  </header>   
+  <p>Ceci est un test.</p>
 </body>
 </html>
